# trsc.2022.0272

./: README.md
evrpscp-python/: requirements.txt  setup.py
evrpscp-python/column_generation/: README.md  __init__.py  __main__.py  cli.py  column.py  debug_mode.py  discretization.py  event.py  master_problem.py  node.py  node_queue.py  node_solver.py  output.py  parameters.py  solution.py  solver.py
evrpscp-python/data/: README.md
evrpscp-python/dyn_tour_mip/: README.md  __init__.py  __main__.py  cli.py  legacy_model_builder.py  legacy_network.py  model_builder.py  models.py  network_based_model_builder.py  output.py  solver.py  subproblem_based_model_builder.py
evrpscp-python/evrpscp/: __init__.py  __main__.py  dump.py  parameters.py
evrpscp-python/frvcp-cpp/: .clang-format  CMakeLists.txt
evrpscp-python/frvcp-cpp/bindings/: CMakeLists.txt
evrpscp-python/frvcp-cpp/bindings/include/frvcp_bindings/: battery.hpp  binding_helpers.hpp  charger.hpp  charging_schedule.hpp  cost_profile.hpp  instance.hpp  label.hpp  network.hpp  node.hpp  preprocessor.hpp  pwl.hpp  soc_profile.hpp  solver.hpp  tour.hpp  util.hpp
evrpscp-python/frvcp-cpp/bindings/src/: battery.cpp  bindings.cpp  charger.cpp  charging_schedule.cpp  cost_profile.cpp  instance.cpp  label.cpp  network.cpp  node.cpp  preprocessor.cpp  pwl.cpp  soc_profile.cpp  solver.cpp  tour.cpp  util.cpp
evrpscp-python/pelletier/: __main__.py  cli.py  conversion.py  mip.py  models.py
evrpscp-python/scripts/: create_charger.py  create_dump_from_pelletier.py  generate_benchmarks.sh
(+194 files in other folders)
